integrate OpenWeather API call functions updated documentation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ AIRFLOW_SMTP_MAIL_FROM=your_gmail
 
 AIRFLOW_WEBSERVER_SECRET_KEY=secret_key
 AIRFLOW_FERNET_KEY=fernet_key
+
+#OPENWEATHER Project API values
+OPENWEATHER_API_KEY=YOUR_API_KEY
+OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5/weather
+OPENWEATHER_UNITS=metric
